docs/css/styles.css
/* main */

body {
    font-family: 'IBM Plex Sans', sans-serif;
    font-weight: 300;

}

a {
    color: #0073ba;
}
.brand-icon {
	width: 40px;
}
code {
	color: #b93370;
	background-color: #eff0f1;
}
.main {
    margin: auto;
}
.banner-image {
	width: 40px;
}
.cw-main-content {
    position: absolute;
    top: 115px;
    right: 0px;
    bottom: 0px;
    overflow-y: scroll;
}

/* end main */
/* Header nav bar */
.cw-banner {
    background: #fff;
    color: #fff;
    font-size: 20px;
    border-bottom: 10px solid #005E8A;
    height: 115px;
    margin: auto;
}
.cw-banner.fixed-top {
	border-bottom: 4px solid #d8d8d8;
}

.cw-nav-link {
    color: #0073ba !important;
}

.cw-nav-link:hover {
    font-weight: 400;
}

.cw-header-logo {
    position: relative;
    left: 70px;
}
.cw-header-link-text {
	font-size: 16px;
	font-weight: 600;
}
.cw-header-link-text:hover {
	font-size: 16px;
	font-weight: 600;
}
.cw-header-link-news {
	padding-right: 33px;
}

.cw-header-link-blog {
	padding-right: 33px;
}

.cw-header-link-guides {
	padding-right: 33px;
}

.cw-header-link-docs {
	padding-right:45px;
}
.cw-navbar-padding {
    padding-right: 70px;
}

.cw-navbar-nav {
    font-size: 16px;
    display: table;
}

.cw-navbar-item {
    display: table-cell;
    vertical-align: middle;
}
.cw-youtube-desc {
	margin-top: auto;
    margin-bottom: auto;
}
.cw-docs-button:hover > svg *{
	fill: #ffffff;
}
.cw-docs-button:hover {
	background: #015b8c;
    color: #fff;
}
.cw-docs-button {
	color: #0073ba;
    text-align: center;
    width: 170px;
    height: 44px;
    border-radius: 0px;
    border: 2px solid #0073ba;
    display: table;
}

.cw-docs-button > span {
	display:table-cell;
 	vertical-align:middle;
}

.cw-youtube-view-font {
	font-size: 36px;
}

.cw-youtube-left {
	padding-left: 100px;
}

.cw-youtube-right {
	padding-right: 100px;
}

.cw-youtube-italic {
	font-style: italic;
}

.cw-youtube-thin {
	font-weight: 200;
}

.cw-youtube-bold {
	font-weight: 400;
}

.cw-v-middle {
	margin-top: auto;
	margin-bottom: auto;
}
.cw-download-button:hover {
    background: #015b8c;
    color: #fff;
}

.cw-download-button {
    background: #0073ba;
    color: #fff;
    text-align: center;
    width: 135px;
    height: 44px;
    border-radius: 0px;
}

.cw-download-link {
    display: none;
}

#github-stars-button {
    padding-left: 32px;
}

.cw-header-link {
    padding-left: 32px;
}

#download-li {
    padding-left: 75px;
}

/* end header nav bar */

/* hero */

#hero-body {
    height: 615px;
    margin: auto;
    color: #fff;
    position: relative;
    background-image: linear-gradient(180deg, #0073ba 0%, #003462 100%, #D8D8D8 100%);
}

#hero-main {
    margin-left: calc(50% - 664px);
    margin-right: calc(50% - 664px);
    display: flex;
    position: relative;
}

#hero-main-title {
    font-size: 48px;
}

#hero-main-title>span {
    font-weight: 400;
}

#hero-main-hero-eclipse {
    position: absolute;
    top: 75px;
    left: 261px;
}

#hero-main-hero-eclipse img {
    max-width: 378px;
    width: 100%;
}

#hero-main-hero-che {
    position: absolute;
    top: 58px;
    left: 416px;
}

#hero-main-hero-che img {
    max-width: 378px;
    width: 100%
}

#hero-main-hero-intellij {
    position: absolute;
    top: 41px;
    left: 561px;
}

#hero-main-hero-vscode img {
    max-width: 545px;
    -moz-box-shadow: -5px 5px 15px 0px #3a3a3a;
    -webkit-box-shadow: -5px 5px 15px 0px #3a3a3a;
    box-shadow: -5px 5px 15px 0px #3a3a3a;
    width: 100%;
}

#hero-main-hero-intellij img {
    max-width: 378px;
    width: 100%
}

#hero-main-headline {
    font-size: 21px;
}

#hero-main-hero {
    left: 50px;
    position: relative;
    max-width: 950px;
    width: 100%;
    top: 129px;
    font-size: 12px;
}

#hero-main-fulltext {
    font-size: 14px;
    line-height: 23px;
}

#hero-main-text {
    padding-top: 87px;
    max-width: 494px;
}

#get-started-button:hover {
    background: #015b8c;
}

#get-started-button {
    background: #0073ba;
    border: 2px solid #FFFFFF;
    font-weight: 400;
    color: #FFFFFF;
    width: 135px;
    height: 44px;
    border-radius: 0px;
    margin-top: 20px;
    text-align: center;
}

#hero-city-svg {
    width: 100%;
}

#hero-city-svg-2 {
   	 display: none;
}
#hero-city-svg-3 {
   	 display: none;
}

#hero-city {
    position: absolute;
    display: unset;
    overflow: hidden;
    bottom: 0px;
    width: 100%;
    pointer-events:none;
}

#hero-turbine {
    position: absolute;
    bottom: 0px;
    width: 100%;
    pointer-events:none;
}

#hero-turbine-svg {
    top: 100px;
    max-width: 581px;
    left: 17px;
    margin-left: calc(50% - 700px);
}
/* end hero */

/* getting started */
#getting-started-div {
    margin: 20px 82px 40px 82px;
}

.cw-getting-started-header {
    font-size: 36px;
    padding-top: 20px;
    padding-bottom: 20px;
}

.cw-getting-started-col {
    border-right: 3px solid #0073ba;
}

.cw-getting-started-img-holder {
    height: 100px;
    width: 100%;

}
.cw-logo {
    max-height: 35px;
}

.cw-logo-separator {

    height: 60px;
}

.cw-logo-mm {
    max-height: 60px;
}

.cw-logo-32 {
    height: 32px;
    margin-top: 32px;
}

.cw-logo-93 {
    height: 93px;
}

.cw-getting-started-col-header {
    font-size: 21px;
    font-weight: 400;
    color: #0073ba;
}

.cw-getting-started-col-text-first {
    padding-right: 45px;
    text-align: left;
}

.cw-getting-started-col-text-middle {
    padding-right: 45px;
    text-align: left;
    padding-left: 45px;
}

.cw-getting-started-col-text-last {
    padding-left: 45px;
    text-align: left;
}

/* end geting started */

/* value props */

#value-props-div {
    background: #fff;
    padding: 40px;
}
.row {
    margin-left: 0px;
    margin-right: 0px;
}
.cw-value-props-div-first {
    padding-top: 25px;
}


.cw-value-props-col {
    padding-left: 40px;
    padding-right: 40px;
}
/* ... */

